basic class outline

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=SENG71000-Group20
+server.port=8080
+spring.datasource.url=jdbc:postgresql://
+spring.datasource.username=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
